added to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-ECHO is on.
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Assignment Five: Basic Repo</title>
+	</head>
+<body>
+
+	<h1>Basic Repo</h1>
+
+</body>
+</html>
